add settings.json to .gitignore

--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -8,6 +8,7 @@
         "navigations",
         "swipedown",
         "swipeup",
-        "webcontact"
+        "webcontact",
+        "woff"
     ]
 }
